client/website/src/App.css
body {
  font-family: 'Ubuntu', sans-serif !important;
  font-family: 'Mina', sans-serif;
}

.mdl-layout-title > a {
  font-family: 'Ubuntu', sans-serif;
}

.header-color{
  background: #141E30;  /* fallback for old browsers */
  background: -webkit-linear-gradient(to right, #243B55, #141E30) !important;  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  position: -webkit-sticky !important;
  position:sticky !important;
  top:0;
}

.mdl-layout__drawer-button{
  position:fixed !important;
}

.landing-grid {

  top:0;
  left:0;
  width:100%;
  height:100%;
  text-align:center;
}
/* Landing page card CSS */

.landing-cards {
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.12);
  border-radius:12px !important;
  transition: transform 0.2s cubic-bezier(0.37, 0.03, 0.11, 0.96),box-shadow 0.2s ease-out !important;
}

.landing-cards:hover {
  transform: translateY(-7px) !important;
  box-shadow: 0 8px 12px 6px rgba(0,0,0,0.12);
}

/* Project page card CSS */

.project-card{
  box-shadow: 0 12px 6px 6px rgba(0,0,0,0.12);
  border-radius:12px !important;
  transition: transform 0.2s cubic-bezier(0.37, 0.03, 0.11, 0.96),box-shadow 0.2s ease-out !important;
}

.project-card:hover {
  transform: translateY(-9px) !important;
  box-shadow: 0 16px 14px 6px rgba(0,0,0,0.12);
}

#card-title > h2 {
  font-size:21px !important;
}

/* Blog page card CSS */

.blog-grid-article {
  border-radius:12px !important;
  transition: transform 0.2s cubic-bezier(0.37, 0.03, 0.11, 0.96),box-shadow 0.2s ease-out !important;
}

.blog-grid-article:hover {
  transform: translateY(-3px) translateX(15px) !important;
  box-shadow: 0 2px 2px 3px rgba(0,0,0,0.12);
}


.avatar-img {
  padding-top:5em;
}
.img-circle {
  border-radius: 50%;
}

.banner-text {
  background-color:black;
  opacity: .8;
  width:75%;
  margin:auto;
  border-radius:10px;
  font-family: 'Ubuntu', sans-serif;

}

/* #navigation > a {
  color: #eeeaea;
} */

#navigation > a:hover {
  font-size:14px;
  color:#FFF;
  text-shadow: -1px 1px 20px #aaa, 1px -1px 20px #fff;

  transition: font-size 0.5s ease, color 0.5s ease,text-shadow 0.8s linear 0s;

}

.banner-text h1 {
  text-align: center;
  font-size: 44px;
  font-weight:bold;
  color: white;
}

.banner-text hr {
  border-top:5px dotted white;
  width:50px;
  margin:auto;
}

.banner-text p {
  text-align: center;
  color:white;
  font-size:20px;
  padding:1em;
}

.social-links {
  position:absolute;
  top:420px;
  left:280px;
}

/* .social-links{
  position:relative;
  left:-300px;
  height:200px;
} */
.social-links i {
  color:white;
  font-size:5em;
  padding:8px;
}


.submit-btn{
  background-color:#0326A5 !important;
}



/* Resume page Css */

@media (min-width:430px) and (max-width: 840px){
  #personal-description {
    width: calc(70% - 16px);
    margin: auto;
  }



}
.resume-right-col {
  background: black;
  opacity:.8;
  color:white;
  padding:2em;
}

.category-tabs{
  text-align: center;
  width:95%;

}

.category-tabs p {
margin-top: 10px;
}

.search-div {
  position:sticky;
  top:40px;
  background-color: white;
  z-index:2;
}
.link-hover:hover{
  transform: rotate(-10deg) skew(-10deg, 0);
}

.like-number {
  font-family: 'Josefin Sans', sans-serif;
  font-weight: 500;
	color: #5f5f5f;
	width: 100%;
  font-size: 3vw;
  text-transform: capitalize;
  text-align: center;
}

.like-number p span {
	color: #e74c3c;
}

.like-heart-btn {
  width: 3.4vw ;
	height: 100px;
  cursor:pointer;
  border: none;
  background-color: transparent;
  outline:none;
}

.like-heart-btn {

	height: 70px !important;
  width:auto !important;
  cursor:pointer;
  border: none;
  background-color: transparent;
}

.mdl-layout__drawer-button {
  color: white !important;
}

@media (min-width: 800px){
.rcw-widget-container {
  margin-right:auto !important;
  margin-left: auto !important;
  position: relative !important;
  display: block !important;
  }
}

@media screen and (max-width: 800px){
  .mdl-layout__drawer-button{
    color: black !important;
  }
  .rcw-launcher {
    margin-bottom:300px !important;
    margin-right: auto !important;
    margin-left:auto !important;
    position: relative !important;
}
.search-div {
  position:sticky;
  top:0px;
  background-color: white;
  z-index:2;
}
}

@media screen and (max-width: 430px){

  .rcw-launcher {
    margin-bottom:15px !important;
    margin-right: auto !important;
    margin-left:auto !important;
    position: relative !important;
  }
  .rcw-widget-container {
    position: relative !important;
  }
  .rcw-widget-container.rcw-opened {
    position: absolute !important;
  }
}

.rcw-conversation-container  .rcw-header {
  background-color: #141E30 !important;
}
.rcw-close-button {
  background-color: #141E30 !important;

}

.rcw-message > .rcw-response {
  background-color:black;
  opacity: .8;
  color: white;
}

.rcw-launcher {
  background-color: #141E30 !important;
  box-shadow: 0 2px 3px 6px rgba(0,0,0,0.12);
  transition: transform 0.2s cubic-bezier(0.37, 0.03, 0.11, 0.96),box-shadow 0.2s ease-out !important;

}
.rcw-widget-container:hover {
  transform: translateY(-4px) !important;
}
.rcw-launcher:hover{
  box-shadow: 0 4px 5px 4px rgba(0,0,0,0.12); 

}
.rcw-launcher .rcw-badge {
  background-color: #a82011 !important;
}
.rcw-client {
  background-color:black !important;
  opacity: .4;
  color: white;
}

@media (max-width: 800px){
  .category-tabs {
    margin-top:45px;
    vertical-align: middle;
  }
  .category-tabs p {
    line-height:1.6em;
    font-size: 0.7em;
    font-weight: bold;


  }
}
a .hu-background-color_button-background hu-background-color_button-background-light_hover hu-border-color_button-background-dark {
  display:none;
}


.project-card {
  min-width: 330px;
  margin: auto;
  height:420px;
  margin-top:25px;
  margin-bottom:10px;
}

.mdl-card__supporting-text {
  padding: 8px 16px !important;
}

@media (min-width: 800px){

.projects-grid {
  display:flex;
  flex-wrap: wrap;
  margin-top:20px;
 }
 .landing-cards{
   padding:10px;
   margin:auto;
   width:100px;
 }
 .article-blog {
   width:300px;
 }


}
@media (max-width: 430px){
  .article-blog .mdl-card__supporting-text {
    font-size:1.2rem !important;
    overflow: visible !important;
  }

  .article-blog h2 {
    font-size:1.4em !important;
  }
  .intro {
    width: 87% !important;
    margin: auto !important;
  }


}

.parallax {
  background-image: url("/static/media/thinking.59151a6a.jpeg") !important;
  background-attachment: fixed !important;
  background-position: center top !important;
  background-repeat: no-repeat !important;
  height: 450px !important;
  margin-bottom: -80px;
}

.logo {
  width: auto !important;
  height: "80px";
  margin-right:"15px";
}



#contact-form{
  border-radius:12px;
  transition: all 0.2s ease-in-out;
}
#contact-form:hover{
  background: #212a5e;

}

#signup{
  border-radius:12px;
  transition: all 0.2s ease-in-out;
}

#signup:hover{
  background-color: rgb(103,0,0) !important;
}

.intro {
  text-align: justify;
  width: 70%;
  margin: auto;
}

.intro-paragraph  p {
  font-size:20px;
  margin: 0 0 16.5px;
  color: #141E30;
  text-align:"justify";
  font-family: 'Ubuntu', sans-serif;

}
.banner-text p {
  color: white !important;
}

h1, h2, h3 {
  font-family: 'Ubuntu', sans-serif !important;
  font-weight:600 !important;
}

#company-link {
  padding-bottom:4px;
  transition: all 0.35s linear;
  background: linear-gradient(to bottom, white 0%, white 98%);
  background-size: 0px 2px;
  background-repeat: no-repeat;
  background-position: left 100%;
}

#company-link:hover{
  background-size: 100% 2px;
}

